--- a/workspace/ims-client/src/pages/message/message.html
+++ b/workspace/ims-client/src/pages/message/message.html
@@ -1,17 +1,79 @@
 <div class="ui grid">
     <div class="sixteen wide column">
-        <div class="ui segment">
-            <h2 class="ui dividing header">Message</h2>
-            <div class="ui grid">
-                <div class="right floated three wide column">
-                    <button type="button" class="fluid ui primary button" [routerLink]="['/message']">Add Message</button>
+        <h2 class="ui header">Message</h2>
+        <div class="ui breadcrumb">
+            <a class="section">Administrator</a>
+            <i class="right angle icon divider"></i>
+            <div class="active section">Message</div>
+        </div>
+
+        <div class="ui top attached header">
+            <span>Search Criteria</span>
+        </div>
+        <div class="ui attached segment">
+            <div class="ui form">
+                <div class="fields">
+                    <div class="four wide field">
+                        <label>Message Code</label>
+                        <input type="text" placeholder="Message Code">
+                    </div>
+                    <div class="six wide field">
+                        <label>Message Eng</label>
+                        <input type="text" placeholder="Message Eng">
+                    </div>
+                    <div class="six wide field">
+                        <label>Message Tha</label>
+                        <input type="text" placeholder="Message Tha">
+                    </div>
+                </div>
+                <div class="fields">
+                    <div class="four wide field">
+                        <label>Message Type</label>
+                        <input type="text" placeholder="First Name">
+                    </div>
+                </div>
+                <div class="fields">
+                    <div class="sixteen wide field">
+                        <div class="ui grid">
+                            <div class="center aligned row">
+                                <div class="column">
+                                    <div class="ui mini primary button" [routerLink]="['/message']">
+                                        <i class="search icon"></i> Search
+                                    </div>
+                                    <div class="ui mini button" [routerLink]="['/message']">
+                                        <i class="refresh icon"></i> Reset
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
+        </div>
 
-            <table id="messageDt" class="ui table">
+        <div class="ui clearing top attached header segment">
+            <div class="ui grid">
+                <div class="two column row">
+                    <div class="column">
+                        Search Result
+                    </div>
+                    <div class="right aligned column">
+                        <div class="ui mini primary button" [routerLink]="['/message-detail']">
+                            <i class="add icon"></i> Add Message
+                        </div>
+                        <div class="ui mini disabled button">
+                            <i class="trash icon"></i> Delete
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="ui attached segment">
+            <table id="messageDt" class="ui small celled table">
                 <thead>
                     <tr>
-                        <th>Code</th>
+                        <th></th>
+                        <th>Message Code</th>
                         <th>Message Eng</th>
                         <th>Message Tha</th>
                         <th>Message Type</th>
@@ -22,3 +84,43 @@
         </div>
     </div>
 </div>
+
+<!-- <div class="ui dimmer modals page transition visible active" style="display: block !important;">
+    <div class="ui modal transition visible active" style="margin-top: -92.7px; display: block !important;">
+        <div class="header">
+            Add Message
+        </div>
+        <div class="content">
+            <p>Are you sure you want to delete your account</p>
+        </div>
+        <div class="actions">
+            <div class="ui button">
+                Cancel
+            </div>
+            <div class="ui positive right labeled icon button">
+                Save
+                <i class="save icon"></i>
+            </div>
+        </div>
+    </div>
+</div> -->
+
+<!-- <div class="ui dimmer modals page transition visible active" style="display: block !important;">
+    <div class="ui mini modal transition visible active" style="margin-top: -92.7px; display: block !important;">
+        <div class="header">
+            Delete Message
+        </div>
+        <div class="content">
+            <p>Are you sure you want to delete your account</p>
+        </div>
+        <div class="actions">
+            <div class="ui negative button">
+                No
+            </div>
+            <div class="ui positive right labeled icon button">
+                Yes
+                <i class="checkmark icon"></i>
+            </div>
+        </div>
+    </div>
+</div> -->
