--- a/workspace/ims-client/src/pages/message/message.html
+++ b/workspace/ims-client/src/pages/message/message.html
@@ -58,7 +58,7 @@
                         Search Result
                     </div>
                     <div class="right aligned column">
-                        <div class="ui mini primary button" [routerLink]="['/message-detail']">
+                        <div class="ui mini primary button" [routerLink]="['/add-message']">
                             <i class="add icon"></i> Add Message
                         </div>
                         <div class="ui mini disabled button">
