--- a/workspace/ims-client/src/pages/message/message-detail.html
+++ b/workspace/ims-client/src/pages/message/message-detail.html
@@ -13,26 +13,26 @@
             <span>Search Criteria</span>
         </div>
         <div class="ui attached segment">
-            <div class="ui form">
+            <div id="messageForm" class="ui form">
                 <div class="fields">
                     <div class="six wide required field">
                         <label>Message Code</label>
-                        <input type="text" placeholder="Message Code" [(ngModel)]="message.messageCode">
+                        <input type="text" placeholder="Message Code" name="messageCode" [(ngModel)]="message.messageCode">
                     </div>
                     <div class="two wide field"></div>
                     <div class="four wide required field">
                         <label>Message Type</label>
-                        <input type="text" placeholder="Message Type" [(ngModel)]="message.messageType">
+                        <input type="text" placeholder="Message Type" name="messageType" [(ngModel)]="message.messageType">
                     </div>
                 </div>
                 <div class="fields">
                     <div class="eight wide required field">
                         <label>Message Eng</label>
-                        <textarea [(ngModel)]="message.messageEn"></textarea>
+                        <textarea name="messageEn" [(ngModel)]="message.messageEn"></textarea>
                     </div>
                     <div class="eight wide required field">
                         <label>Message Tha</label>
-                        <textarea [(ngModel)]="message.messageTh"></textarea>
+                        <textarea name="messageTh" [(ngModel)]="message.messageTh"></textarea>
                     </div>
                 </div>
                 <div class="fields">
