--- a/workspace/ims-client/src/index.html
+++ b/workspace/ims-client/src/index.html
@@ -8,6 +8,40 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <style>
+        html {
+            overflow: hidden;
+        }
+
+        body {
+            overflow-y: scroll;
+            position: relative;
+        }
+
+        /* width */
+
+        ::-webkit-scrollbar {
+            width: 12px;
+        }
+
+        /* Track */
+
+        ::-webkit-scrollbar-track {
+            background: #f1f1f1;
+        }
+
+        /* Handle */
+
+        ::-webkit-scrollbar-thumb {
+            background: #729ac4;
+        }
+
+        /* Handle on hover */
+
+        ::-webkit-scrollbar-thumb:hover {
+            background: #1e83db;
+        }
+    </style>
 </head>
 
 <body>
