change color in table and add '-' replace '0'

--- a/workspace/ims-client/src/index.html
+++ b/workspace/ims-client/src/index.html
@@ -39,7 +39,7 @@
         }
         
         .null {
-            background: red;
+            background: #cccc;
         }
     </style>
 </head>
