update ope04-1 [ frontend ]

--- a/workspace/ims-client/src/index.html
+++ b/workspace/ims-client/src/index.html
@@ -41,6 +41,16 @@
         .null {
             background: #cccc;
         }
+        
+        .green {
+            background: #1ee02d;
+            color: white;
+        }
+        
+        .red {
+            background: #ff2300;
+            color: white;
+        }
     </style>
 </head>
 
