--- a/workspace/ims-client/src/index.html
+++ b/workspace/ims-client/src/index.html
@@ -63,25 +63,11 @@
         }
 
         .modal {
-            position: absolute;
+            position: absolute !important;
         }
 
-        .mini.modal {
-            top: 15%;
-            left: 50%;
-            margin-left: -12.5%;
-        }
-
-        .tiny.modal {
-            top: 15%;
-        }
-
-        .small.modal {
-            top: 15%;
-        }
-
-        .large.modal {
-            top: 12.5%;
+        .hidden {
+            display: none !important;
         }
     </style>
 </head>
