QtnReports and QtnFinalReports

--- a/workspace/ims-client/src/index.html
+++ b/workspace/ims-client/src/index.html
@@ -63,7 +63,8 @@
         }
 
         .modal {
-            position: absolute !important;
+            top: 12.5% !important;
+            position: absolute;
         }
 
         .hidden {
