update int080313 flow completed

--- a/workspace/ims-client/src/index.html
+++ b/workspace/ims-client/src/index.html
@@ -57,6 +57,10 @@
             color: white;
         }
 
+        .textRed {
+            color: #ff2300;
+        }
+
         .yellow {
             background: #d1da56;
             color: white;
