--- a/workspace/ims-client/src/index.html
+++ b/workspace/ims-client/src/index.html
@@ -16,7 +16,10 @@
         body {
             position: relative;
             background: #eceff4 !important;
+
         }
+
+
 
         /* width */
 
@@ -45,7 +48,7 @@
         /* change color in column table */
 
         .null {
-            background: #cccc;
+            background: #729ac4;
         }
 
         .green {
